[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cartridge.tscn" type="PackedScene" id=5]
[ext_resource path="res://Background.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]
layer = 2

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 161, 109 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Cartridge" parent="." instance=ExtResource( 5 )]
position = Vector2( 19, 162 )

[node name="Background" parent="." instance=ExtResource( 6 )]
position = Vector2( 53, 162 )

[node name="CollisionBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 50, 119 )

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
